--- a/react-dine-frontend/package.json
+++ b/react-dine-frontend/package.json
@@ -13,6 +13,7 @@
     "@phosphor-icons/react": "^2.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
