--- a/react-dine-frontend/package.json
+++ b/react-dine-frontend/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "scrollable-component": "^1.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
