--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -18,7 +18,7 @@ jobs:
           node-version: 18
         
       - name: Install dependencies
-        uses: npm install 
+        run: npm install 
       
       - name: Run tests
         run: npm run test:ci 
