--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: Frontend CI/CD
 
 on: 
   push:
@@ -19,6 +19,8 @@ jobs:
         
       - name: Install dependencies
         run: npm install 
+        working-directory: react-dine-frontend
       
       - name: Run tests
-        run: npm run test:ci 
+        run: npm run test:ci
+        working-directory: react-dine-frontend
