--- a/package.json
+++ b/package.json
@@ -2,5 +2,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "react-router-dom": "^6.20.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "jsdom": "^23.0.1",
+    "vitest": "^1.0.4"
   }
 }
