--- a/.github/workflows/pipeline-frontend.yml
+++ b/.github/workflows/pipeline-frontend.yml
@@ -24,9 +24,7 @@ jobs:
           npm run test:ci
 
       - name: Make Production Build
-        run: | 
-          cd react-dine-frontend
-          npm run build
+        run: cd react-dine-frontend && npm run build
 
       - name: Archive Production Build Files
         uses: actions/upload-artifact@v3
