--- a/react-dine-frontend/package.json
+++ b/react-dine-frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.21.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "scrollable-component": "^1.2.1"
   },
